# personal-progress-report

./: .gitignore  README.md  make_table.py  pyproject.toml  query.graphql  query.py  query2.graphql  query3.graphql
