[tool.poetry]
name = "personal-progress-report"
version = "0.1.0"
description = ""
authors = ["Eric Berquist <eric.berquist@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
pandas = "^0.25.3"
tabulate = "^0.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
